update script to run with yarn

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "test",
   "main": "test",
   "scripts": {
-    "test": "test"
+    "test:all": "k6 run test/start.js"
   },
   "repository": {
     "type": "git",
